{
    "name": "Defaultinput",
    "maps": [
        {
            "name": "Character",
            "id": "02e131f7-05f4-4074-925b-2e558985b125",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "d42f1811-3764-46b2-bf24-42f77940cbaa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "6dfb92f1-54fb-42f7-951d-c4f9ec6b8b46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "86af1f3c-c5b4-4b54-ad44-27e6a6689d17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "72c656b7-89d4-4006-b712-a72e7ffdbcee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "PassThrough",
                    "id": "abd0b85d-4abe-4b0c-bd59-3ed59bde04e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "70aab9ae-3147-4a9e-82a5-240ab32f923e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SprintReleased",
                    "type": "Button",
                    "id": "21065371-cfc8-44b8-9158-8d6ebf6b1bcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanLeft",
                    "type": "Button",
                    "id": "d526b6e2-20db-44c5-b021-0e51b58dfe5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRight",
                    "type": "Button",
                    "id": "e7e86414-ccfa-4aef-b865-a6311cb0dc08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanLeftReleased",
                    "type": "Button",
                    "id": "c1bf532c-1e57-400d-8811-6174eb2a12c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRightReleased",
                    "type": "Button",
                    "id": "b17e0333-0e0a-487c-bd54-7c4b204b44f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c860726d-72c2-43d8-8756-f98cc6c05a44",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f63df2c6-e45c-4ace-90c6-c05bc65b3174",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4e2591df-1690-4772-ab18-a32a4db709f5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d2081434-18ed-4cb0-b3d0-5b45e928d8e9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f89cb1fd-f23a-476a-88d9-b5146c444bce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "252058d2-d2fa-4188-8813-ce29861d0908",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b4493137-b0a7-4d3e-8d76-9195edbc62db",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94325f8f-07c3-4c4f-a21b-bbc2755346fb",
                    "path": "<Keyboard>/c",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e052e673-abf5-4aaa-bc4e-dc8faca203e6",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e61d04b0-deda-4828-a539-7f0625a9ec97",
                    "path": "<Keyboard>/c",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e4a31c0-de0a-4673-9d60-cb708f639d49",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67bdb0c5-a5b2-40e9-bf63-24d84cf42449",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83ff4f16-3bc2-4a4b-acba-1e3340f9a1f7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4188bb79-02e2-4a6b-90a8-05e1ede0ce62",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e1f8306-7ba3-486e-98f1-a73179560521",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeftReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27b0f8e9-0b17-475f-8999-8a389c4acd56",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRightReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "0c7a7bf7-d87e-4413-b83f-56dcc1ef5144",
            "actions": [
                {
                    "name": "FirePressed",
                    "type": "Button",
                    "id": "a776bed4-071c-44df-8b0a-5bc4db21145f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2Released",
                    "type": "Button",
                    "id": "fc6d1b77-f454-4387-acd7-3eb1bff6f886",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Pressed",
                    "type": "Button",
                    "id": "be55abbf-e38d-4df6-abe4-7232224badee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Released",
                    "type": "Button",
                    "id": "3be09a05-8304-4222-a8d2-33ed0f8df41f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1589a130-6d1d-477b-b323-adb00be1bfa0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FirePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8d7437c-84c3-4b31-acbb-a4feee8c7a14",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b8e32d9-8e56-45bf-9aad-da98cbfea89b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5be6cb00-d8f6-49b5-9e1b-65a547400991",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}